--- a/css/responsive.css
+++ b/css/responsive.css
@@ -14,7 +14,7 @@
     }
 
     .subtitle {
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
 
     .section {
@@ -57,16 +57,6 @@
         height: 400px;
         width: 100%;
         object-fit: cover;
-    }
-
-    .row#gallery {
-        min-height: unset;
-        max-width: 100%;
-        background-color: green;
-    }
-    
-    .row#gallery .column {
-        min-height: 200px;
     }
     
     .gallery.gujohachiman .slide:nth-child(2) {
